# sears-voice-ai

./: .dockerignore  .env.example  .gitignore  DEPLOY_CHECK.md  Dockerfile  IMPLEMENTATION_PLAN.md  PROJECT_STANDARDS.md  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  requirements.txt  write-env.sh
.github/workflows/: deploy-dev.yml  deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
app/: main.py  seed.py
app/core/: config.py  database.py  exceptions.py  logging.py  security.py
app/models/: __init__.py  appointment.py  base.py  call_session.py  technician.py
app/repositories/: __init__.py  appointment.py  call_session.py  slot.py  technician.py
app/schemas/: __init__.py  appointment.py  common.py  image.py  slot.py  technician.py
app/services/: email.py  scheduling.py  upload.py  vision.py
app/voice/: anthropic_bridge.py  anthropic_tools.py  audio.py  bridge.py  context.py  prompts.py  session.py  tools.py  tts.py
deploy/nginx/: sears-voice-ai.conf
docs/: ARCHITECTURE.md  SECRETS.md  TECHNICAL_DESIGN.md
docs/adr/: 001-voice-provider-twilio.md  002-llm-openai-realtime.md  003-database-postgresql.md  004-email-sendgrid.md
scripts/: deploy.sh  remote-bootstrap.sh  server.env.template  setup-nginx-ssl.sh  write-env.sh
tests/: conftest.py
tests/e2e/: test_health_live.py
tests/integration/: test_api_appointments.py  test_api_health.py  test_api_images.py  test_api_technicians.py  test_voice_status.py  test_voice_webhook.py
tests/unit/: test_appointment_repository.py  test_email_upload.py  (+3 more)
(+5 files in other folders)
