[project]
name = "sears-voice-ai"
version = "1.0.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.coverage.run]
omit = [
    "app/seed.py",
    "app/voice/bridge.py",
    "app/voice/session.py",
    "app/voice/audio.py",
    "app/services/vision.py",
]
